SERVER-34823 Make sure LegacySession ID's match their MessagingPort connection ID

(cherry picked from commit dd7de2240e42ea384d3804634522739618a6da0a)